syntax = "proto3";

message ExampleProtobufRequest {
    string id = 1;
    string code = 2;
}

message ExampleProtobufResponse {
    string status = 1;
    string result = 2;
    string errorMessage = 3;
}

service ExampleProtoService {
    rpc getResponse (ExampleProtobufRequest) returns (ExampleProtobufResponse);
}